src/test/ui/span/wf-method-late-bound-regions.stderr
error[E0597]: `pointer` does not live long enough
  --> $DIR/wf-method-late-bound-regions.rs:30:19
   |
LL |         f2.xmute(&pointer)
   |                   ^^^^^^^ borrowed value does not live long enough
LL |     };
   |     - `pointer` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
